fix playerId